<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ucsd.cse110.group50.eventfinder.CreateEvent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nameFieldHint"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:id="@+id/eventName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:hint="@string/dateFieldHint"
        android:clickable="true"
        android:onClick="pickDate"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:id="@+id/eventDate"
        android:textSize="20sp"
        android:layout_marginTop="14dp"
        android:textColor="#FF000000"
        android:layout_below="@+id/eventName"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/invalidDateMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:id="@+id/invalidDateMessage"
        android:visibility="invisible"
        android:textColor="#FFF44336"
        android:textSize="20sp"
        android:layout_below="@+id/eventDate"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateCard"
        android:visibility="invisible"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/invalidDateMessage">

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:headerBackground="#FF1A237E" />
    </android.support.v7.widget.CardView>

</RelativeLayout>
